large movie card letter spacing fix

--- a/stylesheets/large_card.css
+++ b/stylesheets/large_card.css
@@ -104,9 +104,8 @@
   font-weight: 700;
   font-size: 2rem;
   padding: 1rem;
-  text-align: justify;
-  text-justify: inter-character;
-  text-align-last: justify;
+  text-align: center;
+  letter-spacing: 0.5rem;
   color: var(--text-primary-white);
 }
 @media only screen and (max-width: 451px) {
